# SimplePaint

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
libs/GLAD/: CMakeLists.txt
libs/GLAD/include/glad/: glad.h
libs/GLAD/src/: glad.c
src/: CMakeLists.txt  OpenFile.h  app.c  app.h  colors.h  draw.c  draw.h  image.c  image.h  interface.c  interface.h  main.c  structs.h
src/Platform/: OpenFileLinux.c  OpenFileWindows.c
